add response errors
